--- a/.github/workflows/assistant.yml
+++ b/.github/workflows/assistant.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  insights:
+  fibbot:
     runs-on: ubuntu-latest
     permissions: 
       issues: write
