--- a/.github/workflows/assistant.yml
+++ b/.github/workflows/assistant.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Run Rust Action
         uses: ./
-        env:
-          PR_NUMBER: ${{ github.event.pull_request.number }}
         with:
           enable_fib: true 
           max_threshhold: 105
+          pr_number: ${{ github.event.pull_request.number }}
